--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-streamlit
-pandas
+streamlit>=1.33.0
+pandas>=2.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
+openpyxl>=3.1.2
+playwright>=1.41.0
